templates/habricentral/html/com_resources/resources.css
@import url("/components/com_resources/assets/css/resources.css");

#sbox-newwindow {
	display:none;
	}
#sbox-window-cover {
	position:absolute;
	top:0px;
	right:0px;
	width:25px;
	height:25px;
	background:whiteSmoke;
}
#sub-menu li a span {
	padding-left: 20px;
	padding-right: 0;
}

.com_resources .col div {
	padding-left: 25px;
	position: relative;
}
.com_resources .col.span-third div:before {
	content: "\270D";
	display: block;
	position: absolute;
	left: 0;
	top: 0.2em;
	width: 20px;
	height: 20px;
	font-size: 20px;
	font-family: 'Fontcons';
	color: #AAA;
	border: none;
}
.com_resources .col.span-third .audio:before {
	content: "\266B";
}
.com_resources .col.span-third .book:before,
.com_resources .col.span-third .booksection:before {
	content: "\f02d";
}
.com_resources .col.span-third .book:before,
.com_resources .col.span-third .booksection:before {
	content: "\f02d";
}
.com_resources .col.span-third .magazinearticle:before,
.com_resources .col.span-third .journalarticle:before {
	content: "\f072";
}
.com_resources .col.span-third .governmentdocument:before {
	content: "\f068";
}
.com_resources .col.span-third .video:before {
	content: "\f008";
}
.com_resources .col.span-third .these:before {
	content: "\f036";
}
.com_resources .col.span-third .dataset:before {
	content: "\f001";
}
.com_resources .col.span-third .newspaperarticle:before {
	content: "\f053";
}
.com_resources .col.span-third .presentation:before {
	content: "\f000";
}
.com_resources .col.span-third .pamphlet:before {
	content: "\f04a";
}
.com_resources .col.span-third .conferencepaper:before {
	content: "\f0c5";
}
.com_resources .col.span-third .report:before {
	content: "\f016";
}
.com_resources .col.span-third .poster:before {
	content: "\f03e";
}
.com_resources .col.span-third .stillimage:before {
	content: "\f08c";
}

.plg-content .sponsor-logo {
	text-align: center;
}
.plg-content .sponsor-logo a {
	border: none;
}
.aside .container p.wiki {
	padding-left: 27px;
	background: url("/components/com_resources/images/types/fc-wiki.gif") 4px 2px no-repeat;
}
.results {
	margin-top: 0;
}

.extracontent .container .topicpage, 
.extracontent .container .wiki {
	position: relative;
}
.extracontent .container .topicpage:before, 
.extracontent .container .wiki:before {
	display: block;
	position: absolute;
	left: 0;
	top: 0;
	width: 20px;
	height: 20px;
	font-size: 20px;
	font-family: 'Fontcons';
	color: #aaa;
	border: none;
}

.resource-content ul.badges {
	margin-left: 0;
}
.resource-content ul.badges li:first-child {
	margin: 0;
}

